src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Collateral (Co-branded Brochures, Data Sheets, etc.)</fullName>
                </value>
                <value>
                    <fullName>Demonstration Equipment</fullName>
                </value>
                <value>
                    <fullName>Direct Mail / E-mail Campaign / Newsletter</fullName>
                </value>
                <value>
                    <fullName>Funded Head (Consultant / System Architect)</fullName>
                </value>
                <value>
                    <fullName>Funded Head (Sales Champion)</fullName>
                </value>
                <value>
                    <fullName>Participation in IT, Applications and/or Telecoms Event</fullName>
                </value>
                <value>
                    <fullName>Participation in Nokia Event (i.e. Nokia Partner Conference)</fullName>
                </value>
                <value>
                    <fullName>Promotional Items (Co- branded)</fullName>
                </value>
                <value>
                    <fullName>Public Relations / Press Release</fullName>
                </value>
                <value>
                    <fullName>Sales Incentive Program (Partner Run)</fullName>
                </value>
                <value>
                    <fullName>Seminars &amp; Road Shows (Partner developed and/or sponsored)</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Trade Shows</fullName>
                </value>
                <value>
                    <fullName>Training(sales, pre-sales and post-sales)</fullName>
                </value>
                <value>
                    <fullName>Web Marketing and Development (Website / Microsite)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_InternalOnly__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type_POC__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other Offer Docs-Restricted</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Customer Submission (excl Pricing)</fullName>
                </value>
                <value>
                    <fullName>Offer Working Docs</fullName>
                </value>
                <value>
                    <fullName>Other Offer Docs-Unrestricted</fullName>
                </value>
                <value>
                    <fullName>LoA G4 Template</fullName>
                </value>
                <value>
                    <fullName>Customer Presentation</fullName>
                </value>
                <value>
                    <fullName>Account Plan</fullName>
                </value>
                <value>
                    <fullName>Meeting Minutes</fullName>
                </value>
                <value>
                    <fullName>Survey Results</fullName>
                </value>
                <value>
                    <fullName>Other Account Docs-Unrestricted</fullName>
                </value>
                <value>
                    <fullName>Win Plan</fullName>
                </value>
                <value>
                    <fullName>G2 Material</fullName>
                </value>
                <value>
                    <fullName>RFX / Customer Documents</fullName>
                </value>
                <value>
                    <fullName>G3 Material</fullName>
                </value>
                <value>
                    <fullName>Kick Off Material</fullName>
                </value>
                <value>
                    <fullName>PreSales Risk</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Risk BoM/BoQ</fullName>
                </value>
                <value>
                    <fullName>Project Target Agreement (PTA)</fullName>
                </value>
                <value>
                    <fullName>G6 Material</fullName>
                </value>
                <value>
                    <fullName>Purchase Order (PO)</fullName>
                </value>
                <value>
                    <fullName>Oppty Working Docs</fullName>
                </value>
                <value>
                    <fullName>Other Oppty Docs-Unrestricted</fullName>
                </value>
                <value>
                    <fullName>Other Oppty Docs-Confidential</fullName>
                </value>
                <value>
                    <fullName>Bid Directive</fullName>
                </value>
                <value>
                    <fullName>Offer Strategy</fullName>
                </value>
                <value>
                    <fullName>Customer Pricing</fullName>
                </value>
                <value>
                    <fullName>G4 Material</fullName>
                </value>
                <value>
                    <fullName>G4 MoM/Notes</fullName>
                </value>
                <value>
                    <fullName>LoA G5 Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Document</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Marketing Banner</fullName>
                </value>
                <value>
                    <fullName>Online Training</fullName>
                </value>
                <value>
                    <fullName>Sales Presentation</fullName>
                </value>
                <value>
                    <fullName>Image Gallery Image</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Non-SFDC</fullName>
                </value>
                <value>
                    <fullName>SFDC Video</fullName>
                </value>
                <value>
                    <fullName>Non-SFDC Video</fullName>
                </value>
                <value>
                    <fullName>Surround Document</fullName>
                </value>
                <value>
                    <fullName>Quote Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Performance__c</fullName>
        <label>Proof of Performance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Itemized production and development invoices</fullName>
                </value>
                <value>
                    <fullName>URL of developed pages</fullName>
                </value>
                <value>
                    <fullName>Copy (text) of web pages developed</fullName>
                </value>
                <value>
                    <fullName>Itemized invoice(s) for training course fees</fullName>
                </value>
                <value>
                    <fullName>Copy of the Certificate of Completion OR</fullName>
                </value>
                <value>
                    <fullName>Attendee list provided and signed by Nokia instructor</fullName>
                </value>
                <value>
                    <fullName>Itemized invoices showing total costs</fullName>
                </value>
                <value>
                    <fullName>Trade Show details incl. date(s)</fullName>
                </value>
                <value>
                    <fullName>Trade Show invitation sent by Partner (if applicable)</fullName>
                </value>
                <value>
                    <fullName>Photo of booth with Nokia logo (if applicable)</fullName>
                </value>
                <value>
                    <fullName>Number of booth visitors (if captured)</fullName>
                </value>
                <value>
                    <fullName>Copy of presentation/agenda with Nokia logo (if applicable)</fullName>
                </value>
                <value>
                    <fullName>If approved as exception, itemized travel and lodging invoices</fullName>
                </value>
                <value>
                    <fullName>Itemized invoices from telemarketing agency incl. detailed costs</fullName>
                </value>
                <value>
                    <fullName>Call list of calls placed</fullName>
                </value>
                <value>
                    <fullName>Copy of call script</fullName>
                </value>
                <value>
                    <fullName>Itemized invoices showing total costs of activity</fullName>
                </value>
                <value>
                    <fullName>Final copy of invitation and detailed agenda (if applicable)</fullName>
                </value>
                <value>
                    <fullName>Copy of presentations featuring Nokia</fullName>
                </value>
                <value>
                    <fullName>List of attendees (if available)</fullName>
                </value>
                <value>
                    <fullName>Itemized 3rd party invoices</fullName>
                </value>
                <value>
                    <fullName>Itemized invoices for awards or names of award recipients</fullName>
                </value>
                <value>
                    <fullName>Awards won for SPIFFs</fullName>
                </value>
                <value>
                    <fullName>Copy of approved incentive rules</fullName>
                </value>
                <value>
                    <fullName>Point-of-Sale (POS) Report for Nokia products</fullName>
                </value>
                <value>
                    <fullName>Itemized production and publisher invoices</fullName>
                </value>
                <value>
                    <fullName>Distribution list and/or Run Report</fullName>
                </value>
                <value>
                    <fullName>Sample of PR/press release incl. publication date &amp; Nokia logo</fullName>
                </value>
                <value>
                    <fullName>Itemized production invoices</fullName>
                </value>
                <value>
                    <fullName>Digital image of promotional merchandise with Nokia logo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Share_with_External_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will make the file visible to external users</inlineHelpText>
        <label>Share with External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Class_Asset__c</fullName>
        <label>Sub-Class Asset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Customer Presentation</fullName>
                </value>
                <value>
                    <fullName>Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Executive Summary</fullName>
                </value>
                <value>
                    <fullName>Product Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Sales Brief</fullName>
                </value>
                <value>
                    <fullName>Sales Playbook</fullName>
                </value>
                <value>
                    <fullName>Sales Training</fullName>
                </value>
                <value>
                    <fullName>Solution App Notes</fullName>
                </value>
                <value>
                    <fullName>Technical Presentation</fullName>
                </value>
                <value>
                    <fullName>Technical Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Asset_Categories__c</fullName>
        <label>Support Asset Categories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst Reports</fullName>
                </value>
                <value>
                    <fullName>Application Notes</fullName>
                </value>
                <value>
                    <fullName>Articles</fullName>
                </value>
                <value>
                    <fullName>Brochures</fullName>
                </value>
                <value>
                    <fullName>Case Studies</fullName>
                </value>
                <value>
                    <fullName>Data Sheets</fullName>
                </value>
                <value>
                    <fullName>Presentations</fullName>
                </value>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Videos</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>White Papers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>CH_Knowledge_Content_Version</fullName>
        <active>true</active>
        <description>Record Type of Content Version to have validation rules only for Case Handling related attachments</description>
        <label>Knowledge Content Version</label>
    </recordTypes>
    <recordTypes>
        <fullName>Confidential_File_to_Offer</fullName>
        <active>true</active>
        <label>Confidential File to Offer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Confidential_File_to_Opportunity</fullName>
        <active>true</active>
        <label>Confidential File to Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unrestricted_File_to_Account</fullName>
        <active>true</active>
        <label>Unrestricted File to Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unrestricted_File_to_Offer</fullName>
        <active>true</active>
        <label>Unrestricted File to Offer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unrestricted_File_to_Opportunity</fullName>
        <active>true</active>
        <label>Unrestricted File to Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unrestricted_File_to_Other</fullName>
        <active>true</active>
        <label>Unrestricted File to Other</label>
    </recordTypes>
    <validationRules>
        <fullName>CH_Default_Sharing_to_Freeze</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(SharingOption, &apos;Freeze Sharing Off&apos;) &amp;&amp;  Internal_Only__c = true &amp;&amp;  RecordType.Name = &apos;CH_Knowledge_Content_Version&apos;</errorConditionFormula>
        <errorDisplayField>SharingOption</errorDisplayField>
        <errorMessage>Please freeze content sharing, file marked as internal only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CQ_DocTypeUpdate_Restrict</fullName>
        <active>true</active>
        <description>Document Type field update must be restricted when it&apos;s value is either &apos;Surround Documenr&apos; or &apos;Quote Document&apos;.</description>
        <errorConditionFormula>AND(  
NOT( 
$Profile.Name = &apos;Data Loader Profile&apos; 
), 
OR( ISPICKVAL(PRIORVALUE( Document_Type_POC__c ),&apos;Surround Document&apos;), ISPICKVAL(PRIORVALUE( Document_Type_POC__c ),&apos;Quote Document&apos;) ), ISCHANGED(Document_Type_POC__c) 
)</errorConditionFormula>
        <errorMessage>You cannot change the document type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Document_Type_Update</fullName>
        <active>true</active>
        <description>User can&apos;t change/Update Doc Type on file</description>
        <errorConditionFormula>AND(
NOT($RecordType.DeveloperName = &quot;Unrestricted_File_to_Other&quot;), 
NOT( 
$Profile.Name = &apos;Data Loader Profile&apos; 
),
 ISCHANGED(  Document_Type_POC__c ) 
)</errorConditionFormula>
        <errorDisplayField>Document_Type_POC__c</errorDisplayField>
        <errorMessage>You cannot change the document type once a file is uploaded. Please upload new file.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Offer_G4_G5_template_Upload</fullName>
        <active>false</active>
        <description>G4 / G5 LoA template cannot uploaded via UI on Offer</description>
        <errorConditionFormula>AND(
NOT( 
OR($Profile.Name = &apos;Data Loader Profile&apos; ,
$Profile.Name = &apos;Excel Add-In Profile&apos;  
)
),
OR(
ISPICKVAL(Document_Type_POC__c , &apos;LoA G4 Template&apos;),
ISPICKVAL(Document_Type_POC__c , &apos;LoA G5 Template&apos;)
) 
)</errorConditionFormula>
        <errorDisplayField>Document_Type_POC__c</errorDisplayField>
        <errorMessage>LoA G4/G5 Template can only be uploaded with LoA Excel Add-in.</errorMessage>
    </validationRules>
</CustomObject>