src/objects/ContentVersion/validationRules/CH_Default_Sharing_to_Freeze.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Default_Sharing_to_Freeze</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(SharingOption, &apos;Freeze Sharing Off&apos;) &amp;&amp;  Internal_Only__c = true &amp;&amp;  RecordType.Name = &apos;CH_Knowledge_Content_Version&apos;</errorConditionFormula>
    <errorDisplayField>SharingOption</errorDisplayField>
    <errorMessage>Please freeze content sharing, file marked as internal only.</errorMessage>
</ValidationRule>