src/objects/ContentVersion/validationRules/CQ_DocTypeUpdate_Restrict.validationRule-meta.xml
<ValidationRule>
    <fullName>CQ_DocTypeUpdate_Restrict</fullName>
    <active>true</active>
    <description>Document Type field update must be restricted when it&apos;s value is either &apos;Surround Documenr&apos; or &apos;Quote Document&apos;.</description>
    <errorConditionFormula>AND(  
NOT( 
$Profile.Name = &apos;Data Loader Profile&apos; 
), 
OR( ISPICKVAL(PRIORVALUE( Document_Type_POC__c ),&apos;Surround Document&apos;), ISPICKVAL(PRIORVALUE( Document_Type_POC__c ),&apos;Quote Document&apos;) ), ISCHANGED(Document_Type_POC__c) 
)</errorConditionFormula>
    <errorMessage>You cannot change the document type.</errorMessage>
</ValidationRule>