src/objects/ContentVersion/validationRules/Restrict_Document_Type_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Document_Type_Update</fullName>
    <active>true</active>
    <description>User can&apos;t change/Update Doc Type on file</description>
    <errorConditionFormula>AND(
NOT($RecordType.DeveloperName = &quot;Unrestricted_File_to_Other&quot;), 
NOT( 
$Profile.Name = &apos;Data Loader Profile&apos; 
),
 ISCHANGED(  Document_Type_POC__c ) 
)</errorConditionFormula>
    <errorDisplayField>Document_Type_POC__c</errorDisplayField>
    <errorMessage>You cannot change the document type once a file is uploaded. Please upload new file.</errorMessage>
</ValidationRule>