src/objects/ContentVersion/validationRules/Restrict_Offer_G4_G5_template_Upload.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Offer_G4_G5_template_Upload</fullName>
    <active>false</active>
    <description>G4 / G5 LoA template cannot uploaded via UI on Offer</description>
    <errorConditionFormula>AND(
NOT( 
OR($Profile.Name = &apos;Data Loader Profile&apos; ,
$Profile.Name = &apos;Excel Add-In Profile&apos;  
)
),
OR(
ISPICKVAL(Document_Type_POC__c , &apos;LoA G4 Template&apos;),
ISPICKVAL(Document_Type_POC__c , &apos;LoA G5 Template&apos;)
) 
)</errorConditionFormula>
    <errorDisplayField>Document_Type_POC__c</errorDisplayField>
    <errorMessage>LoA G4/G5 Template can only be uploaded with LoA Excel Add-in.</errorMessage>
</ValidationRule>